package br.com.fiap.smarttraffic.model;

public class Reading {
}
